feat(TUP-25241): Online Help in studio - Setup online Help (#2983)
* Fix TUP-25241 Online Help in studio - Setup online Help
https://jira.talendforge.org/browse/TUP-25241

* Fix TUP-25241 Online Help in studio - Setup online Help
https://jira.talendforge.org/browse/TUP-25241

* Fix TUP-25241 Online Help in studio - Setup online Help
https://jira.talendforge.org/browse/TUP-25241

* Fix TUP-25241 Online Help in studio - Setup online Help
https://jira.talendforge.org/browse/TUP-25241

* Fix TUP-25241 Online Help in studio - Setup online Help
https://jira.talendforge.org/browse/TUP-25241

* Fix TUP-25241 Online Help in studio - Setup online Help
https://jira.talendforge.org/browse/TUP-25241

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,7 @@
 		<module>main/plugins/org.talend.datatools.xml</module>
 		<module>main/plugins/org.talend.developpement</module>
 		<module>main/plugins/org.talend.helpers</module>
+		<module>main/plugins/org.talend.help.external</module>		
 		<module>main/plugins/org.talend.libraries.apache</module>
 		<module>main/plugins/org.talend.libraries.apache.axis2</module>
 		<module>main/plugins/org.talend.libraries.apache.batik</module>
