--- a/main/plugins/org.talend.libraries.dom4j-jaxen/pom.xml
+++ b/main/plugins/org.talend.libraries.dom4j-jaxen/pom.xml
@@ -43,11 +43,6 @@
         <artifactId>dom4j</artifactId>
         <version>2.1.1</version>
     </dependency>
-    <dependency>
-        <groupId>dom4j</groupId>
-        <artifactId>dom4j</artifactId>
-        <version>1.6.1</version>
-    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -60,8 +55,7 @@
                     <fileset>
                         <directory>${project.basedir}/lib</directory>
                         <includes>
-                            <include>dom4j*.jar</include>
-                            <include>jaxen-1.1.6.jar</include>
+                            <include>*.jar</include>
                         </includes>
                         <followSymlinks>false</followSymlinks>
                     </fileset>
@@ -81,7 +75,7 @@
                     <configuration>
                         <outputDirectory>${project.basedir}/lib</outputDirectory>
                         <includeGroupIds>
-                            org.dom4j,jaxen,dom4j
+                            org.dom4j,jaxen
                         </includeGroupIds>
                     </configuration>
                 </execution>
