--- a/main/plugins/org.talend.libraries.jdbc.mysql/plugin.xml
+++ b/main/plugins/org.talend.libraries.jdbc.mysql/plugin.xml
@@ -18,11 +18,11 @@
         </libraryNeeded>
         <libraryNeeded
               context="plugin:org.talend.libraries.jdbc.mysql"
-              id="mariadb-java-client-1.1.7.jar"
+              id="mariadb-java-client-2.5.3.jar"
               language="java"
               message="Needed for Mysql jdbc plugin"
-              mvn_uri="mvn:org.talend.libraries/mariadb-java-client-1.1.7/6.0.0"
-              name="mariadb-java-client-1.1.7.jar"
+              mvn_uri="mvn:org.mariadb.jdbc/mariadb-java-client/2.5.3/6.0.0"
+              name="mariadb-java-client-2.5.3.jar"
               required="true">
         </libraryNeeded>
         <libraryNeeded
