fix(TBD-9884) : Missing log42 conf on Yarn side (#3021)

--- a/main/plugins/org.talend.core/build.properties
+++ b/main/plugins/org.talend.core/build.properties
@@ -1,9 +1,10 @@
 source.. = src/main/java/
-output.. = class/
+output.. = target/classes/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
                plugin.properties,\
                metadata.properties,\
-               schema/
+               schema/,\
+               lib/
