--- a/main/plugins/org.talend.core/pom.xml
+++ b/main/plugins/org.talend.core/pom.xml
@@ -9,6 +9,13 @@
   </parent>
   <artifactId>org.talend.core</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <dependencies>
+  		<dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.12.1</version>
+        </dependency>
+  </dependencies>
   <build>
 	<plugins>
 	  <plugin>
@@ -22,6 +29,25 @@
           </execution>
         </executions>
       </plugin>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-dependency-plugin</artifactId>
+    <executions>
+        <execution>
+            <id>copy-dependencies</id>
+            <phase>generate-sources</phase>
+            <goals>
+                <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+                <outputDirectory>${project.basedir}/lib</outputDirectory>
+                <includeGroupIds>
+                    org.apache.logging
+                </includeGroupIds>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>      
 	</plugins>
   </build>
 </project>
