bugfix(TUP-25965) Include subjob's test reports (#3055)
* bugfix(TUP-25965) Synchronize test reports

* bugfix(TUP-25965) Ignore test failures and zip test reports

* bugfix(TUP-25965) Ignore test failures and zip test reports

* bugfix(TUP-25965) Ignore test failures and zip test reports

* bugfix(TUP-25965) Ignore test failures and zip test reports

* bugfix(TUP-25965) Ignore test failures

* bugfix(TUP-25965) Ignore test failures

* bugfix(TUP-25965) Skip tests when running job

* fix(TUP-25965): Call service to check is build job or not

--- a/main/plugins/org.talend.repository.items.importexport/plugin.xml
+++ b/main/plugins/org.talend.repository.items.importexport/plugin.xml
@@ -19,5 +19,9 @@
             id="org.talend.repository.items.importexport.handlers.exports.SyncChildrenSourceCodeProvider"
             provider="org.talend.repository.items.importexport.handlers.exports.SyncChildrenSourceCodeProvider">
       </resourcesProvider>
+      <resourcesProvider
+            id="org.talend.repository.items.importexport.handlers.exports.SyncChildrenTestReportsProvider"
+            provider="org.talend.repository.items.importexport.handlers.exports.SyncChildrenTestReportsProvider">
+      </resourcesProvider>
    </extension>
 </plugin>
