--- a/main/plugins/org.talend.libraries.apache/build.properties
+++ b/main/plugins/org.talend.libraries.apache/build.properties
@@ -3,7 +3,7 @@ bin.includes = META-INF/,\
                .,\
                licences/,\
                lib/,\
-               lib/xercesImpl.jar,\
+               lib/xercesImpl-2.12.0.jar,\
                lib/xml-apis.jar
 bin.excludes = libs_not_used/commons-betwixt-0.8.jar,\
                libs_not_used/commons-digester-1.7.jar,\
