feat(TDI-43717):integrate cosmosdb into studio (#3195)

--- a/main/plugins/org.talend.designer.maven.tos/resources/tacokit/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/tacokit/pom.xml
@@ -41,6 +41,11 @@
 			<artifactId>couchbase</artifactId>
 			<version>${tacokit.components.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.talend.components</groupId>
+			<artifactId>cosmosDB</artifactId>
+			<version>${tacokit.components.version}</version>
+		</dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
