--- a/main/plugins/org.talend.designer.maven.tos/resources/tacokit/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/tacokit/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>studio-tacokit-dependencies</artifactId>
 	<packaging>pom</packaging>
 	<properties>
-		<tacokit.components.version>1.6.3-SNAPSHOT</tacokit.components.version>
+		<tacokit.components.version>1.9.0</tacokit.components.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -35,22 +35,16 @@
 		</repository>
 	</repositories>
 
-	<!-- Following dependency management block is a quickfix for 7.3.1 release. After release it should be removed and
-	couchbase-locales version should be fixed in couchbase component pom.xml-->
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.talend.components</groupId>
-				<artifactId>couchbase-locales</artifactId>
-				<version>1.6.7</version>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.talend.components</groupId>
 			<artifactId>couchbase</artifactId>
+			<version>${tacokit.components.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.talend.components</groupId>
+			<artifactId>cosmosDB</artifactId>
 			<version>${tacokit.components.version}</version>
 		</dependency>
         <dependency>
